[package]
authors = ['Parity Technologies <admin@parity.io>']
edition = '2018'
name = 'paradao-runtime-wasm'
version = '1.0.0'
[dependencies.paradao-runtime]
default-features = false
path = '..'

[features]
default = []
std = ['paradao-runtime/std']

[workspace]
members = []

[lib]
crate-type = ['cdylib']
[profile.release]
lto = true
panic = 'abort'
